Revert "Update parts/client/Gemfile.lock to get the latest gems"
This reverts commit 161efad1bdd73ddaba0fcf3ee017aa9fe263408c.

It turned out that updating gems slightly broke puavo-client-daemon.
The device image reporting to Puavo got broken, so reverting...
I would rather like to see the bundling removed, and actually
from Debian Stretch all ruby gems can be found with the exception
of "minitest-stub_any_instance", which is needed for tests.
But not doing that now.

--- a/parts/client/Makefile
+++ b/parts/client/Makefile
@@ -35,6 +35,9 @@ install: install-dirs
 	$(INSTALL_PROGRAM) -t $(DESTDIR)$(sbindir) bin/puavo-rest-client
 	cp -r lib/* $(DESTDIR)$(RUBY_LIB_DIR)
 
+# XXX Care should be taken if this is done, the latest available gems break
+# XXX device image reporting to Puavo in puavo-client-daemon.
+# XXX The currently locked gems are fine.
 update-gemfile-lock: clean
 	rm -f Gemfile.lock
 	GEM_HOME=.tmpgem bundle install
