Add Winff to webmenu.

--- a/rules/webmenu/templates/menu.yaml
+++ b/rules/webmenu/templates/menu.yaml
@@ -431,6 +431,14 @@ items:
   - source: qjackctl
     type: desktop
     inactiveByDeviceType: thinclient
+  - source: winff
+    type: desktop
+    name:
+      fi: Winff-videomuunnin
+      sv: Winff
+      en: Winff
+      de: Winff
+    osIcon: /usr/share/icons/Faenza/mimetypes/96/video-x-generic.png  
 - type: menu
   name:
     en: Games
