Add "vmware-horizon-client" puavo-pkg package.

--- a/parts/pkg/packages/Makefile
+++ b/parts/pkg/packages/Makefile
@@ -34,6 +34,7 @@ packagedirs += tilitin/
 packagedirs += ti-nspire-cx-cas-ss/
 packagedirs += t-lasku/
 packagedirs += vidyo-client/
+packagedirs += vmware-horizon-client/
 packagedirs += vstloggerpro/
 
 # opinsys-os specific
