--- a/debs/linux/debian/rules
+++ b/debs/linux/debian/rules
@@ -90,7 +90,7 @@ clean: debian/control
 	rm -rf $(BUILD_DIR) $(STAMPS_DIR) debian/lib/python/debian_linux/*.pyc debian/lib/python/debian_linux/__pycache__ $$(find debian -maxdepth 1 -type d -name 'linux-*') debian/*-modules-*-di* debian/kernel-image-*-di* debian/xen-linux-system-* debian/*-tmp
 	dh_clean
 
-CONTROL_FILES = debian/changelog $(wildcard debian/templates/*.in)
+CONTROL_FILES = $(wildcard debian/templates/*.in)
 CONTROL_FILES += debian/config/defines $(wildcard debian/config/*/defines) $(wildcard debian/config/*/*/defines)
 CONTROL_FILES += $(wildcard debian/installer/*/kernel-versions) $(wildcard debian/installer/*/package-list) debian/installer/package-list
 debian/control debian/rules.gen: debian/bin/gencontrol.py $(CONTROL_FILES)
