Add geogebra6 to webmenu.

--- a/rules/webmenu/templates/menu.yaml
+++ b/rules/webmenu/templates/menu.yaml
@@ -246,6 +246,8 @@ items:
     type: desktop
   - source: geogebra
     type: desktop
+  - source: geogebra6
+    type: desktop
   - source: org.kde.kmplot
     type: desktop
   - source: marble-qt
