Add SketchUP Free web-version to webmenu and fix Freecad icon.

--- a/rules/webmenu/templates/desktop.d/default-overrides.yaml
+++ b/rules/webmenu/templates/desktop.d/default-overrides.yaml
@@ -162,6 +162,9 @@ fmit:
     sv: Stämmningsprogram
     de: Stimmprogramm
   osIcon: /usr/share/icons/hicolor/scalable/apps/fmit.svg
+freecad:
+  name: FreeCAD
+  osIcon: /usr/share/icons/hicolor/64x64/apps/freecad.png
 fritzing:
   osIcon: /usr/share/pixmaps/fritzing_icon.png
 gcompris:
