--- a/rules/webmenu/templates/menu.yaml
+++ b/rules/webmenu/templates/menu.yaml
@@ -95,11 +95,12 @@ items:
   - source: blender
     type: desktop
     inactiveByDeviceType: thinclient
-  - source: photofilmstrip
-    type: desktop
+  - type: web
+    name: SketchUp Free (Web)
+    url: https://app.sketchup.com/app?hl=en
+    osIconPath: /usr/share/icons/Faenza/apps/96/glade.png
   - source: freecad
     type: desktop
-    name: Freecad
 - type: menu
   name:
     en: Internet
