Change Geogebra launcher name as Geogebra 5.

--- a/rules/webmenu/templates/desktop.d/default-overrides.yaml
+++ b/rules/webmenu/templates/desktop.d/default-overrides.yaml
@@ -182,7 +182,7 @@ geany:
 geogebra:
   keywords:
   - digabi
-  name: Geogebra
+  name: Geogebra 5
 gftp:
   osIcon: /usr/share/icons/Faenza/apps/96/preferences-system-windows.png
 ghemical:
