Some fixes for the "puavo-pulseaudio-setup" and introduce "puavo-pulseaudio-get-puavoconf".
The current Pulseaudio version does not find sinks/sources unless
card profile has been set up, which means that the old way of setting
only sink or source name no longer works.  For now, only support
the longer configuration format.

To help ease transition (and it seems that some of the device names
have changed anyway), add "puavo-pulseaudio-get-puavoconf"-command,
which should look up the current audio device setup and provide
puavo-conf configuration values for setting up the default audio device.

--- a/parts/ltsp/client/Makefile
+++ b/parts/ltsp/client/Makefile
@@ -86,8 +86,9 @@ install : installdirs
 		xsessions/*
 
 	$(INSTALL_PROGRAM) -t $(DESTDIR)$(bindir) \
-		puavo-pulseaudio-setup \
+		puavo-pulseaudio-get-puavoconf \
 		puavo-pulseaudio-list \
+		puavo-pulseaudio-setup \
 		puavo-remote-assistance-applet \
 		puavo-rest-request
 
