--- a/debs/puavo-os/debian/rules
+++ b/debs/puavo-os/debian/rules
@@ -67,6 +67,10 @@ override_dh_auto_install:
 		install prefix=/usr sysconfdir=/etc		\
 		DESTDIR=$(CURDIR)/debian/puavo-local-config
 
+	$(MAKE) -C logrelay				        \
+		install prefix=/usr sysconfdir=/etc		\
+		DESTDIR=$(CURDIR)/debian/puavo-logrelay
+
 	$(MAKE) -C ltsp/bootserver			\
 		install prefix=/usr sysconfdir=/etc		\
 		DESTDIR=$(CURDIR)/debian/puavo-ltsp-bootserver
@@ -102,6 +106,14 @@ override_dh_auto_install:
 	$(MAKE) -C sharedir/manager			\
 		install prefix=/usr sysconfdir=/etc		\
 		DESTDIR=$(CURDIR)/debian/puavo-sharedir-manager
+
+	$(MAKE) -C tftp				                \
+		install prefix=/usr sysconfdir=/etc		\
+		DESTDIR=$(CURDIR)/debian/puavo-tftpd
+
+	$(MAKE) -C tftp/hooks					\
+		install prefix=/usr sysconfdir=/etc		\
+		DESTDIR=$(CURDIR)/debian/puavo-tftpd-hooks
 
 	$(MAKE) -C vpn/client				\
 		install prefix=/usr sysconfdir=/etc		\
