Add puavo-sysmerge, a tool to help making and keeping up-to-date various configuration files under /state.

--- a/parts/ltsp/client/Makefile
+++ b/parts/ltsp/client/Makefile
@@ -96,7 +96,8 @@ install : installdirs
 		puavo-dnssd-printer-client \
 		puavo-handle-external-files-actions \
 		puavo-netboot-init-nfs \
-		puavo-report-system-version
+		puavo-report-system-version \
+		puavo-sysmerge
 
 	$(INSTALL_PROGRAM) -t $(DESTDIR)$(datarootdir)/locale/fi/LC_MESSAGES \
 		po/fi/puavo-remote-assistance-applet.mo
