Rename puavo-sysmerge to puavo-sysmerge-onedir, and add a new puavo-sysmerge that calls it.  "puavo-sysmerge-onedir" should just provide a mechanism for updating configuration files, and "puavo-sysmerge" should be the tool for administrators and and boot scripts.

--- a/parts/ltsp/client/Makefile
+++ b/parts/ltsp/client/Makefile
@@ -97,7 +97,8 @@ install : installdirs
 		puavo-handle-external-files-actions \
 		puavo-netboot-init-nfs \
 		puavo-report-system-version \
-		puavo-sysmerge
+		puavo-sysmerge \
+		puavo-sysmerge-onedir
 
 	$(INSTALL_PROGRAM) -t $(DESTDIR)$(datarootdir)/locale/fi/LC_MESSAGES \
 		po/fi/puavo-remote-assistance-applet.mo
