--- a/parts/tftp/debian.default/control
+++ b/parts/tftp/debian.default/control
@@ -2,13 +2,13 @@ Source: puavo-tftp
 Section: utils
 Priority: extra
 Maintainer: Opinsys Developers <dev@opinsys.fi>
-Build-Depends: debhelper (>= 8.0.0), ruby1.9.3, ruby-minitest, ruby-eventmachine
+Build-Depends: debhelper (>= 8.0.0), ruby, ruby-minitest, ruby-eventmachine
 Standards-Version: 3.9.3
 Homepage: http://github.com/opinsys/puavo-tftp/
 
 Package: puavo-tftpd
 Architecture: all
-Depends: ${misc:Depends}, ruby1.9.3, ruby-eventmachine, ruby-ldap, adduser
+Depends: ${misc:Depends}, ruby, ruby-eventmachine, ruby-ldap, adduser
 Replaces: puavo-tftp (<< 0.3.2-0+opinsys2)
 Breaks: puavo-tftp (<< 0.3.2-0+opinsys2)
 Recommends: ruby-minitest
